--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "setupEnv": "npm install body-parser ejs express mongoose --save"
+    "setupEnv": "npm install body-parser ejs express mongoose --save",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
